# spark-python-sdk

./: .env.local  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release.yml
docs/: authentication.md  batches.docx  batches.md  folders.md  history.md  hybrid.md  impex.md  migration.md  misc.md  readme.md  roadmap.md  services.md
docs/cli/: readme.md
docs/samples/: service-schema.json
docs/sdk/: authentication.md  batches.md  folders.md  history.md  impex.md  misc.md  services.md
docs/wasm/: authentication.md  readme.md
examples/: README.md  async.py  batches.py  config.py  folders.py  history.py  hybrid.py  impex.py  main.py  services.py  transforms.py
examples/usecases/: .gitignore  README.md
examples/usecases/api_v3_for_loop/: inputs.json  main.py  pyproject.toml  readme.md
examples/usecases/api_v4_sync_batch/: chunking.py  hybrid.py  inputs.json  main.py  pyproject.toml  readme.md
examples/usecases/async_batch/: check_status.py  main.py  pyproject.toml  readme.md
examples/usecases/async_batch/helpers/: __init__.py  batch.py  chunk.py  config.py  threads.py
examples/usecases/bulk_upload/: config.yml  main.py  pyproject.toml  readme.md  schema.json  standalone.py
examples/usecases/bulk_upload/helpers/: __init__.py  config.py  manager.py  reporter.py
examples/usecases/service_promotion/: impex.py  main.py  pyproject.toml  readme.md  workflow.yml
examples/usecases/token_validation/: jwt_config.py  main.py  pyproject.toml  readme.md
src/cspark/cli/: __init__.py  _main.py  _utils.py
src/cspark/cli/_commands/: __init__.py  _api.py  _auth.py  _config.py  _folders.py  _services.py  _versions.py
src/cspark/sdk/: __init__.py  _auth.py  _client.py  _config.py  _constants.py  _errors.py  _logger.py  _utils.py  _validators.py  _version.py  auth.py  client.py  config.py  constants.py  errors.py  types.py  utils.py  validators.py  version.py
src/cspark/sdk/resources/: __init__.py  _base.py  _batches.py  _folders.py  _health.py  _history.py  _impex.py  _oauth2.py  _services.py  _transforms.py  base.py  service.py  services.py
src/cspark/sdk/resources/_async/: __init__.py  _base.py  _batches.py  _folders.py  _health.py  _history.py  _impex.py  _oauth2.py  _services.py  _transforms.py
src/cspark/wasm/: __init__.py  _client.py  _config.py  _constants.py  _version.py
src/cspark/wasm/resources/: __init__.py  _base.py  _services.py
src/cspark/wasm/resources/_async/: __init__.py  _base.py  _services.py
test/: conftest.py  sample-ccg.txt  test_auth.py  test_config.py  test_errors.py  test_validators.py
test/resources/: _server.py  test_base.py  test_batches.py  test_oauth2.py  test_services.py
test/resources/_async/: test_oauth2.py
test/wasm/: test_api.py  test_client.py  test_config.py
