[project]
name = "cspark"
version = "0.2.0"
description = "A Python SDK for interacting with Coherent Spark APIs"
license = "Apache-2.0"
authors = [{ name = "Coherent", email = "team@coherent.global" }]
keywords = ["coherent", "spark", "sdk", "restful", "api"]
dependencies = [
  "dataclasses",
  "httpx>=0.23.0, <1"
]
readme = "README.md"
requires-python = ">= 3.7"
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Repository = "https://github.com/Coherent-Partners/spark-python-sdk"
Homepage = "https://github.com/Coherent-Partners/spark-python-sdk/blob/main/docs/readme.md"
Changelog = "https://github.com/Coherent-Partners/spark-python-sdk/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "pytest>=8.1.2",
  "ruff>=0.4.2",
  "pyright>=1.1.363",
  "python-dotenv>=1.0.0",
  "uvicorn>=0.30.1",
  "anyio>=4.4.0",
  "poetry",
]

[project.optional-dependencies]
cli = [
  "click==8.*",
  "pyyaml>=6.0.0",
  "rich>=10",
  "InquirerPy==0.3.*",
]

[project.scripts]
cspark = "cspark.cli:main"

[tool.rye.scripts]
format = { chain = ["ruff format", "ruff check --fix ."] }
lint = { chain = ["format", "pyright"] }
demo = "python examples/main.py"

[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py37"

[tool.ruff.lint]
select = [
  "I",    # isort
  "B",    # bugbear rules
  "F401", # remove unused imports
  "E722", # bare except statements
  "ARG",  # unused arguments
  "T201", # print statements
  "T203", # p-print statements
  "TCH004", # misuse of typing.TYPE_CHECKING
  "TID251", # import rules
]
unfixable = ["T201", "T203"] # disable auto fix for print statements
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"test/**.py" = ["T201", "T203"]
"examples/**.py" = ["T201", "T203"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.pyright]
include = ["src", "test", "examples"]
exclude = ["test/resources"] # Otherwise, pyright will complain about missing casting

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["src/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/cspark"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--tb=short"
xfail_strict = true
filterwarnings = ["error"]
