[tool.poetry]
name = "async_batch"
version = "0.1.0"
description = "Asynchronous batch processing with Spark"
authors = ["Coherent <team@coherent.global>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
cspark = "^0.1.10"
pandas = ">=2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
